--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
+<html>
 <script src="randomPKMN.js"></script>
 <link rel="stylesheet" href="styleSheet.css">
-<html>
 
+<body>
 <title>Generate a Random Kanto Pokemon Team</title>
 <center><button type="button" onclick=
   "randomPokemon(); randomPokemon2(); randomPokemon3(); randomPokemon4(); randomPokemon5(); randomPokemon6();">
   Generate a Random Kanto Pokemon Team!</button></center>
-
 <br>
 <br>
  <div style="display:flex; justify-content:space-between;">
@@ -19,5 +19,5 @@
         <div id="box-5" style="width:200px; height:200px; background-color:#ededed;"></div>
         <div id="box-6" style="width:200px; height:200px; background-color:#ededed;"></div>
       </div>
-
+    </body>
 </html>
